--- a/project1/course-starting-project/index.html
+++ b/project1/course-starting-project/index.html
@@ -7,7 +7,5 @@
     <title>Understanding TypeScript</title>
     <script src="app.js" defer></script>
   </head>
-  <body>
-    <button>New</button>
-  </body>
+  <body></body>
 </html>
